[package]
name = "slice-n-shuffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", default-features = false, features = [
    "std",
    "derive",
    "color",
    "help",
    "usage",
    "error-context",
    "unicode",
] }
getrandom = { version = "0.2.10", default-features = false, features = [
    "std",
    "rdrand",
] }
image = { version = "0.24.7", default-features = false, features = ["png", "jpeg_rayon"] }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
thiserror = { version = "1.0.50", default-features = false }
