[package]
name = "slice-n-shuffle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true

[dependencies]
image = { version = "0.25.2", default-features = false, features = [
    "png",
    "jpeg",
    "rayon",
] }
anyhow = { version = "1.0.86", default-features = false, features = ["std"] }
clap = { version = "4.5.17", default-features = false, features = [
    "std",
    "derive",
    "color",
    "help",
    "usage",
    "error-context",
    "unicode",
] }
getrandom = { version = "0.2.15", default-features = false, features = [
    "std",
    "rdrand",
] }
rand = { version = "0.8.5", default-features = false }
rand_xoshiro = { version = "0.6.0", default-features = false }
rayon = { version = "1.10.0", default-features = false }
serde-wasm-bindgen = { version = "0.6.5", default-features = false, optional = true }
serde_with = { version = "3.9.0", default-features = false, features = [
    "macros",
], optional = true }
thiserror = { version = "1.0.50", default-features = false }
wasm-bindgen = { version = "0.2.87", default-features = false, optional = true }

[features]
default = []

js = ["getrandom/js", "serde_with", "serde-wasm-bindgen", "wasm-bindgen"]
